exports[`custom suggestion`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        Add tag
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Add tag"
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`custom tag`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`local suggestions`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        Add tag
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Add tag"
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`no suggestions`] = `
<div
  className="react-input-tags-input-tags">
  <div>
    <span>
      <span
        id="mirrorNode"
        style={
          Object {
            "overflow": "scroll",
            "position": "absolute",
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }>
        
      </span>
      <input
        className="react-input-tags-input"
        id="inputNode"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        type="text"
        value="" />
    </span>
  </div>
</div>
`;

exports[`remote suggestions`] = `
<div>
  TODO
</div>
`;
